Fix : 게시글 수정 시 투표 없애는 기능 삭제 - voteCount Long -> long 변수 타입 변경 - 이슈 #56